force-app/main/default/objects/OrderItem/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <label>Address (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>