force-app/main/default/objects/OrderItem/fields/AUFART__c.field-meta.xml
<CustomField>
    <fullName>AUFART__c</fullName>
    <label>AUFART</label>
    <length>255</length>
    <type>Text</type>
</CustomField>