force-app/main/default/objects/OrderItem/fields/AUFARTX__c.field-meta.xml
<CustomField>
    <fullName>AUFARTX__c</fullName>
    <label>AUFARTX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>