force-app/main/default/objects/OrderItem/fields/BIRTHDT__c.field-meta.xml
<CustomField>
    <fullName>BIRTHDT__c</fullName>
    <label>BIRTHDT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>