force-app/main/default/objects/OrderItem/fields/Branch_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Plant_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Shop Name)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>