force-app/main/default/objects/OrderItem/fields/BUILDING__c.field-meta.xml
<CustomField>
    <fullName>BUILDING__c</fullName>
    <label>BUILDING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>