force-app/main/default/objects/OrderItem/fields/Building_ID__c.field-meta.xml
<CustomField>
    <fullName>Building_ID__c</fullName>
    <label>Building (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>