force-app/main/default/objects/OrderItem/fields/Building_Srv__c.field-meta.xml
<CustomField>
    <fullName>Building_Srv__c</fullName>
    <label>Building (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>