force-app/main/default/objects/OrderItem/fields/CCOUP_DISC__c.field-meta.xml
<CustomField>
    <fullName>CCOUP_DISC__c</fullName>
    <label>CCOUP_DISC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>