force-app/main/default/objects/OrderItem/fields/CUR_OWNER__c.field-meta.xml
<CustomField>
    <fullName>CUR_OWNER__c</fullName>
    <label>CUR_OWNER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>