force-app/main/default/objects/OrderItem/fields/Daily_Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Type__c</fullName>
    <label>Daily Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>