force-app/main/default/objects/OrderItem/fields/DBM_Order__c.field-meta.xml
<CustomField>
    <fullName>DBM_Order__c</fullName>
    <externalId>true</externalId>
    <label>DBM Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>