force-app/main/default/objects/OrderItem/fields/DBMVBELN__c.field-meta.xml
<CustomField>
    <fullName>DBMVBELN__c</fullName>
    <externalId>true</externalId>
    <label>DBMVBELN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>