force-app/main/default/objects/OrderItem/fields/DISTRICT__c.field-meta.xml
<CustomField>
    <fullName>DISTRICT__c</fullName>
    <label>DISTRICT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>