force-app/main/default/objects/OrderItem/fields/District_ID__c.field-meta.xml
<CustomField>
    <fullName>District_ID__c</fullName>
    <label>District (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>