force-app/main/default/objects/OrderItem/fields/ECOUP_DISC__c.field-meta.xml
<CustomField>
    <fullName>ECOUP_DISC__c</fullName>
    <label>ECOUP_DISC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>