force-app/main/default/objects/OrderItem/fields/Engine_Code__c.field-meta.xml
<CustomField>
    <fullName>Engine_Code__c</fullName>
    <externalId>true</externalId>
    <label>Engine Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>