force-app/main/default/objects/OrderItem/fields/FKDAT__c.field-meta.xml
<CustomField>
    <fullName>FKDAT__c</fullName>
    <label>FKDAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>