force-app/main/default/objects/OrderItem/fields/FKSTO__c.field-meta.xml
<CustomField>
    <fullName>FKSTO__c</fullName>
    <label>FKSTO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>