force-app/main/default/objects/OrderItem/fields/FLOOR__c.field-meta.xml
<CustomField>
    <fullName>FLOOR__c</fullName>
    <label>FLOOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>