force-app/main/default/objects/OrderItem/fields/Floor_ID__c.field-meta.xml
<CustomField>
    <fullName>Floor_ID__c</fullName>
    <label>Floor (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>