force-app/main/default/objects/OrderItem/fields/HOUSE_NUM1__c.field-meta.xml
<CustomField>
    <fullName>HOUSE_NUM1__c</fullName>
    <label>HOUSE_NUM1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>