force-app/main/default/objects/OrderItem/fields/Is_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate__c</fullName>
    <label>Is Duplicate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>