force-app/main/default/objects/OrderItem/fields/Is_Owner_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner Change</label>
    <type>Checkbox</type>
</CustomField>