force-app/main/default/objects/OrderItem/fields/KIS_Password__c.field-meta.xml
<CustomField>
    <fullName>KIS_Password__c</fullName>
    <label>KIS Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>