force-app/main/default/objects/OrderItem/fields/KIS_Username__c.field-meta.xml
<CustomField>
    <fullName>KIS_Username__c</fullName>
    <label>KIS Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>