force-app/main/default/objects/OrderItem/fields/KubotaId__c.field-meta.xml
<CustomField>
    <fullName>KubotaId__c</fullName>
    <label>KubotaId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>