force-app/main/default/objects/OrderItem/fields/LANDTX__c.field-meta.xml
<CustomField>
    <fullName>LANDTX__c</fullName>
    <label>LANDTX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>