force-app/main/default/objects/OrderItem/fields/MATNR__c.field-meta.xml
<CustomField>
    <fullName>MATNR__c</fullName>
    <label>MATNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>