force-app/main/default/objects/OrderItem/fields/MOBILE__c.field-meta.xml
<CustomField>
    <fullName>MOBILE__c</fullName>
    <label>MOBILE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>