force-app/main/default/objects/OrderItem/fields/Mobile_ID__c.field-meta.xml
<CustomField>
    <fullName>Mobile_ID__c</fullName>
    <label>Mobile (ID)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>