force-app/main/default/objects/OrderItem/fields/Mobile_Srv__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Srv__c</fullName>
    <label>Mobile (Srv)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>