force-app/main/default/objects/OrderItem/fields/MOO__c.field-meta.xml
<CustomField>
    <fullName>MOO__c</fullName>
    <label>MOO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>