force-app/main/default/objects/OrderItem/fields/Moo_ID__c.field-meta.xml
<CustomField>
    <fullName>Moo_ID__c</fullName>
    <label>Moo (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>