force-app/main/default/objects/OrderItem/fields/NET_VALUE__c.field-meta.xml
<CustomField>
    <fullName>NET_VALUE__c</fullName>
    <label>NET VALUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>