force-app/main/default/objects/OrderItem/fields/Number_of_Welcome_Call_record__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Welcome_Call_record__c</fullName>
    <label>Number of Welcome Call record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>