force-app/main/default/objects/OrderItem/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>