force-app/main/default/objects/OrderItem/fields/POST_CODE1__c.field-meta.xml
<CustomField>
    <fullName>POST_CODE1__c</fullName>
    <label>POST_CODE1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>