force-app/main/default/objects/OrderItem/fields/Postcode_Srv__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Srv__c</fullName>
    <label>Postcode (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>