force-app/main/default/objects/OrderItem/fields/Province_Srv__c.field-meta.xml
<CustomField>
    <fullName>Province_Srv__c</fullName>
    <label>Province (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>