force-app/main/default/objects/OrderItem/fields/Room_ID__c.field-meta.xml
<CustomField>
    <fullName>Room_ID__c</fullName>
    <label>Room (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>