force-app/main/default/objects/OrderItem/fields/Room_Srv__c.field-meta.xml
<CustomField>
    <fullName>Room_Srv__c</fullName>
    <label>Room (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>