force-app/main/default/objects/OrderItem/fields/ROOMNO__c.field-meta.xml
<CustomField>
    <fullName>ROOMNO__c</fullName>
    <label>ROOMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>