force-app/main/default/objects/OrderItem/fields/RPOINT__c.field-meta.xml
<CustomField>
    <fullName>RPOINT__c</fullName>
    <label>RPOINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>