force-app/main/default/objects/OrderItem/fields/SKC_DISC__c.field-meta.xml
<CustomField>
    <fullName>SKC_DISC__c</fullName>
    <label>SKC DISC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>