force-app/main/default/objects/OrderItem/fields/SOI__c.field-meta.xml
<CustomField>
    <fullName>SOI__c</fullName>
    <label>SOI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>