force-app/main/default/objects/OrderItem/fields/Soi_ID__c.field-meta.xml
<CustomField>
    <fullName>Soi_ID__c</fullName>
    <label>Soi (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>