force-app/main/default/objects/OrderItem/fields/SRV_BUILDING__c.field-meta.xml
<CustomField>
    <fullName>SRV_BUILDING__c</fullName>
    <label>SRV_BUILDING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>