force-app/main/default/objects/OrderItem/fields/SRV_DISTRICT__c.field-meta.xml
<CustomField>
    <fullName>SRV_DISTRICT__c</fullName>
    <label>SRV_DISTRICT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>