force-app/main/default/objects/OrderItem/fields/SRV_FLOOR__c.field-meta.xml
<CustomField>
    <fullName>SRV_FLOOR__c</fullName>
    <label>SRV_FLOOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>