force-app/main/default/objects/OrderItem/fields/SRV_MOBILE__c.field-meta.xml
<CustomField>
    <fullName>SRV_MOBILE__c</fullName>
    <label>SRV_MOBILE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>