force-app/main/default/objects/OrderItem/fields/SRV_MOO__c.field-meta.xml
<CustomField>
    <fullName>SRV_MOO__c</fullName>
    <label>SRV_MOO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>