force-app/main/default/objects/OrderItem/fields/SRV_PROVINCE__c.field-meta.xml
<CustomField>
    <fullName>SRV_PROVINCE__c</fullName>
    <label>SRV_PROVINCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>