force-app/main/default/objects/OrderItem/fields/SRV_ROOMNO__c.field-meta.xml
<CustomField>
    <fullName>SRV_ROOMNO__c</fullName>
    <label>SRV_ROOMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>