force-app/main/default/objects/OrderItem/fields/SRV_SOI__c.field-meta.xml
<CustomField>
    <fullName>SRV_SOI__c</fullName>
    <label>SRV_SOI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>