force-app/main/default/objects/OrderItem/fields/SRV_STREET__c.field-meta.xml
<CustomField>
    <fullName>SRV_STREET__c</fullName>
    <label>SRV_STREET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>