force-app/main/default/objects/OrderItem/fields/SRV_SUBDIST__c.field-meta.xml
<CustomField>
    <fullName>SRV_SUBDIST__c</fullName>
    <label>SRV_SUBDIST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>