force-app/main/default/objects/OrderItem/fields/SRV_TEL_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>SRV_TEL_NUMBER__c</fullName>
    <label>SRV_TEL_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>