force-app/main/default/objects/OrderItem/fields/SRV_VILLAGE__c.field-meta.xml
<CustomField>
    <fullName>SRV_VILLAGE__c</fullName>
    <label>SRV_VILLAGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>