force-app/main/default/objects/OrderItem/fields/Street_Srv__c.field-meta.xml
<CustomField>
    <fullName>Street_Srv__c</fullName>
    <label>Street (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>