force-app/main/default/objects/OrderItem/fields/SUBDIST__c.field-meta.xml
<CustomField>
    <fullName>SUBDIST__c</fullName>
    <label>SUBDIST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>