force-app/main/default/objects/OrderItem/fields/Subdistrict_ID__c.field-meta.xml
<CustomField>
    <fullName>Subdistrict_ID__c</fullName>
    <label>Subdistrict (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>