force-app/main/default/objects/OrderItem/fields/Subdistrict_Srv__c.field-meta.xml
<CustomField>
    <fullName>Subdistrict_Srv__c</fullName>
    <label>Subdistrict (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>