force-app/main/default/objects/OrderItem/fields/TAXID__c.field-meta.xml
<CustomField>
    <fullName>TAXID__c</fullName>
    <label>TAXID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>