force-app/main/default/objects/OrderItem/fields/Tel_ID__c.field-meta.xml
<CustomField>
    <fullName>Tel_ID__c</fullName>
    <label>Tel. (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>