force-app/main/default/objects/OrderItem/fields/Tel_Srv__c.field-meta.xml
<CustomField>
    <fullName>Tel_Srv__c</fullName>
    <label>Tel. (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>