force-app/main/default/objects/OrderItem/fields/Temporary_Key__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Key__c</fullName>
    <externalId>true</externalId>
    <label>Temporary Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>