force-app/main/default/objects/OrderItem/fields/Title_code__c.field-meta.xml
<CustomField>
    <fullName>Title_code__c</fullName>
    <label>Title - code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>