force-app/main/default/objects/OrderItem/fields/TITLEX__c.field-meta.xml
<CustomField>
    <fullName>TITLEX__c</fullName>
    <label>TITLEX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>