force-app/main/default/objects/OrderItem/fields/TOTAL_DISC__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_DISC__c</fullName>
    <label>TOTAL_DISC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>