force-app/main/default/objects/OrderItem/fields/TOTAL_PAYDISC__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_PAYDISC__c</fullName>
    <label>TOTAL PAYDISC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>