force-app/main/default/objects/OrderItem/fields/VBELN__c.field-meta.xml
<CustomField>
    <fullName>VBELN__c</fullName>
    <externalId>true</externalId>
    <label>VBELN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>