force-app/main/default/objects/OrderItem/fields/VILLAGE__c.field-meta.xml
<CustomField>
    <fullName>VILLAGE__c</fullName>
    <label>VILLAGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>