force-app/main/default/objects/OrderItem/fields/VKORG__c.field-meta.xml
<CustomField>
    <fullName>VKORG__c</fullName>
    <label>VKORG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>